# serializer version: 1
# name: TestRegressionOutputs.test_custom_model_with_predict_model
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.6631  |    0.09297 |   -0.14761 |     0.15157 |     -0.05656 |   -0.52442 |   -0.47834 |    -0.25311 |
      |  2 |            2 | 2.20594 | -0.49857 |    0.15482 |   -0.32475 |    -0.17408 |      0.0359  |    0.20746 |    0.00076 |     0.15349 |
      |  3 |            3 | 2.20594 |  0.13851 |    0.30769 |   -0.09097 |    -0.12151 |      0.05378 |    0.34747 |    0.11168 |     0.18189 |
      |  4 |            4 | 2.20594 |  0.47743 |   -0.17062 |    0.11487 |     0.05729 |     -0.2122  |   -0.09988 |   -0.05946 |     0.43085 |
      |  5 |            5 | 2.20594 | -0.45087 |    0.01716 |   -0.1867  |     0.11553 |      0.09861 |    0.10933 |    0.39648 |     0.41705 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02286 |    0.03474 |    0.02038 |     0.01833 |      0.02025 |    0.0271  |    0.03978 |     0.02078 |
      |  2 |            2 |      0 |  0.08432 |    0.06926 |    0.0492  |     0.06087 |      0.0484  |    0.05833 |    0.09296 |     0.11258 |
      |  3 |            3 |      0 |  0.05753 |    0.057   |    0.04468 |     0.03893 |      0.04264 |    0.04047 |    0.07595 |     0.04222 |
      |  4 |            4 |      0 |  0.03019 |    0.03978 |    0.02246 |     0.03169 |      0.02587 |    0.03335 |    0.05233 |     0.05301 |
      |  5 |            5 |      0 |  0.04471 |    0.03839 |    0.03179 |     0.02914 |      0.03581 |    0.02917 |    0.08027 |     0.02848 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_combined_approach_1
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.87222 |    0.07518 |   -0.18869 |     0.06798 |      0.01205 |   -0.1493  |   -0.29848 |    -0.16433 |
      |  2 |            2 | 2.20594 | -0.80192 |   -0.01835 |   -0.27208 |     0.00448 |     -0.11823 |   -0.00957 |    0.00115 |    -0.01459 |
      |  3 |            3 | 2.20594 |  0.36255 |    0.51337 |   -0.04264 |    -0.27061 |      0.14082 |    0.86315 |    0.10028 |     0.28024 |
      |  4 |            4 | 2.20594 |  0.4808  |   -0.12401 |    0.07939 |     0.08194 |     -0.09588 |   -0.17463 |    0.14942 |     0.0803  |
      |  5 |            5 | 2.20594 | -0.12155 |   -0.14272 |   -0.14486 |     0.06988 |      0.11327 |    0.02791 |    0.08811 |     0.2441  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.07622 |    0.07909 |    0.12309 |     0.07428 |      0.09384 |    0.07751 |    0.10126 |     0.07608 |
      |  2 |            2 |      0 |  0.03042 |    0.05876 |    0.07384 |     0.05341 |      0.10157 |    0.03938 |    0.05449 |     0.08315 |
      |  3 |            3 |      0 |  0.05758 |    0.10615 |    0.08005 |     0.13043 |      0.07213 |    0.08931 |    0.05878 |     0.06386 |
      |  4 |            4 |      0 |  0.03725 |    0.06661 |    0.06664 |     0.04324 |      0.06797 |    0.04122 |    0.04375 |     0.03569 |
      |  5 |            5 |      0 |  0.07185 |    0.09085 |    0.11371 |     0.06231 |      0.09802 |    0.07782 |    0.07097 |     0.06114 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_combined_approach_2
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.75854 |   -0.04135 |   -0.20067 |     0.06423 |     -0.02336 |   -0.20683 |   -0.3108  |    -0.04048 |
      |  2 |            2 | 2.20594 | -0.66812 |   -0.07942 |   -0.38746 |    -0.12451 |      0.03478 |    0.01264 |   -0.09781 |     0.08078 |
      |  3 |            3 | 2.20594 |  0.45711 |    0.67687 |    0.06803 |    -0.25692 |      0.01049 |    0.75464 |    0.08648 |     0.15049 |
      |  4 |            4 | 2.20594 |  0.3227  |   -0.06767 |    0.05964 |     0.07387 |     -0.03958 |   -0.11802 |    0.15174 |     0.09464 |
      |  5 |            5 | 2.20594 | -0.22877 |   -0.07588 |   -0.12142 |     0.01552 |      0.10023 |    0.10921 |    0.15572 |     0.17953 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05132 |    0.03205 |    0.06605 |     0.04991 |      0.04569 |    0.04828 |    0.07864 |     0.05287 |
      |  2 |            2 |      0 |  0.04276 |    0.03709 |    0.06558 |     0.0574  |      0.0304  |    0.02982 |    0.06984 |     0.04914 |
      |  3 |            3 |      0 |  0.06309 |    0.06096 |    0.08338 |     0.11331 |      0.06316 |    0.0698  |    0.11386 |     0.09752 |
      |  4 |            4 |      0 |  0.02474 |    0.02209 |    0.03305 |     0.03948 |      0.02739 |    0.02201 |    0.04407 |     0.045   |
      |  5 |            5 |      0 |  0.06247 |    0.046   |    0.05656 |     0.05047 |      0.05814 |    0.04236 |    0.10443 |     0.07341 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_copula_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.85583 |   -0.03288 |   -0.30671 |     0.00738 |     -0.05595 |   -0.11734 |   -0.11441 |    -0.04206 |
      |  2 |            2 | 2.20594 | -0.55887 |   -0.03496 |   -0.3349  |    -0.10287 |     -0.04628 |   -0.03687 |   -0.0774  |    -0.03696 |
      |  3 |            3 | 2.20594 |  0.48236 |    0.53519 |   -0.09517 |    -0.03541 |      0.05156 |    0.83279 |   -0.00115 |     0.177   |
      |  4 |            4 | 2.20594 |  0.38895 |   -0.01136 |    0.18083 |     0.0477  |     -0.00913 |   -0.17386 |    0.04093 |     0.01326 |
      |  5 |            5 | 2.20594 | -0.07958 |   -0.07282 |    0.04764 |     0.06045 |      0.06568 |    0.06388 |    0.00151 |     0.04737 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00856 |    0.00992 |    0.01619 |     0.01251 |      0.01404 |    0.00636 |    0.01837 |     0.01371 |
      |  2 |            2 |      0 |  0.00925 |    0.00771 |    0.01174 |     0.01398 |      0.01088 |    0.00686 |    0.01315 |     0.01151 |
      |  3 |            3 |      0 |  0.02863 |    0.03137 |    0.05492 |     0.04047 |      0.03442 |    0.01783 |    0.04992 |     0.05546 |
      |  4 |            4 |      0 |  0.00929 |    0.012   |    0.01337 |     0.01269 |      0.00962 |    0.00587 |    0.0138  |     0.01768 |
      |  5 |            5 |      0 |  0.015   |    0.01636 |    0.03058 |     0.02788 |      0.02506 |    0.01089 |    0.03409 |     0.03435 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_ctree_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.94832 |    0.05185 |   -0.28768 |    -0.0866  |     -0.03456 |   -0.19539 |   -0.36086 |     0.34377 |
      |  2 |            2 | 2.20594 | -0.36695 |   -0.00629 |   -0.50368 |     0.02089 |     -0.00314 |   -0.04419 |   -0.11287 |    -0.21288 |
      |  3 |            3 | 2.20594 |  0.37687 |    0.65743 |   -0.00244 |    -0.00648 |     -0.05977 |    0.82635 |   -0.00523 |     0.16043 |
      |  4 |            4 | 2.20594 |  0.18793 |   -0.12065 |    0.25461 |     0.01512 |     -0.07799 |   -0.19307 |    0.08305 |     0.32831 |
      |  5 |            5 | 2.20594 |  0.33967 |    0.02645 |   -0.22711 |     0.0061  |      0.00807 |    0.13753 |   -0.41649 |     0.25992 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05715 |    0.05651 |    0.05789 |     0.08121 |      0.04819 |    0.09545 |    0.11083 |     0.07565 |
      |  2 |            2 |      0 |  0.05204 |    0.06165 |    0.06198 |     0.05197 |      0.04713 |    0.04756 |    0.14708 |     0.06878 |
      |  3 |            3 |      0 |  0.05221 |    0.06692 |    0.0452  |     0.06652 |      0.0519  |    0.04949 |    0.10162 |     0.06432 |
      |  4 |            4 |      0 |  0.03823 |    0.05184 |    0.0504  |     0.06414 |      0.04854 |    0.04314 |    0.12402 |     0.08366 |
      |  5 |            5 |      0 |  0.04357 |    0.04105 |    0.05944 |     0.0566  |      0.03375 |    0.04663 |    0.05584 |     0.04958 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.67078 |    0.05359 |   -0.11793 |     0.13903 |     -0.02342 |   -0.27004 |   -0.44211 |    -0.18615 |
      |  2 |            2 | 2.20594 | -0.54496 |   -0.00454 |   -0.41957 |    -0.19643 |      0.02711 |    0.18113 |   -0.22556 |    -0.04628 |
      |  3 |            3 | 2.20594 |  0.29344 |    0.58546 |   -0.06012 |    -0.19498 |      0.06851 |    0.83986 |    0.14176 |     0.27324 |
      |  4 |            4 | 2.20594 |  0.34383 |   -0.06974 |    0.03505 |     0.12026 |     -0.17146 |   -0.11629 |    0.13826 |     0.19741 |
      |  5 |            5 | 2.20594 | -0.36705 |   -0.1028  |   -0.09771 |     0.16055 |      0.13326 |    0.00403 |    0.04609 |     0.35777 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.01355 |    0.01159 |    0.01176 |     0.01268 |      0.01095 |    0.00991 |    0.0104  |     0.00905 |
      |  2 |            2 |      0 |  0.02081 |    0.02523 |    0.02284 |     0.02082 |      0.02336 |    0.01869 |    0.02168 |     0.02311 |
      |  3 |            3 |      0 |  0.01648 |    0.01745 |    0.01635 |     0.01674 |      0.01401 |    0.01705 |    0.01788 |     0.01534 |
      |  4 |            4 |      0 |  0.00933 |    0.00861 |    0.00801 |     0.00824 |      0.00843 |    0.00878 |    0.00996 |     0.00745 |
      |  5 |            5 |      0 |  0.0193  |    0.01905 |    0.02102 |     0.01745 |      0.01996 |    0.01598 |    0.02069 |     0.01777 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_iterative
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.62731 |    0.09253 |   -0.11464 |     0.12098 |     -0.03759 |   -0.27833 |   -0.46312 |    -0.21032 |
      |  2 |            2 | 2.20594 | -0.46525 |    0.00808 |   -0.40202 |    -0.21071 |      0.01639 |    0.12947 |   -0.25842 |    -0.04666 |
      |  3 |            3 | 2.20594 |  0.27951 |    0.6187  |   -0.0484  |    -0.25263 |      0.06544 |    0.83894 |    0.14415 |     0.30147 |
      |  4 |            4 | 2.20594 |  0.36262 |   -0.07835 |    0.01833 |     0.1365  |     -0.17493 |   -0.10318 |    0.14151 |     0.17482 |
      |  5 |            5 | 2.20594 | -0.26617 |   -0.09205 |   -0.10266 |     0.15771 |      0.12916 |   -0.03652 |    0.02401 |     0.32068 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.0178  |    0.01946 |    0.02011 |     0.01823 |      0.02184 |    0.01512 |    0.0168  |     0.02143 |
      |  2 |            2 |      0 |  0.0317  |    0.03869 |    0.02809 |     0.02946 |      0.03044 |    0.02182 |    0.04535 |     0.0477  |
      |  3 |            3 |      0 |  0.02294 |    0.03072 |    0.02875 |     0.02582 |      0.03167 |    0.02437 |    0.02268 |     0.02102 |
      |  4 |            4 |      0 |  0.01495 |    0.01385 |    0.0149  |     0.01266 |      0.0176  |    0.01309 |    0.01518 |     0.01971 |
      |  5 |            5 |      0 |  0.0291  |    0.02542 |    0.02535 |     0.02648 |      0.02784 |    0.02433 |    0.04192 |     0.03004 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_causal_ordering
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.27793 |   -0.00129 |   -0.02922 |    -0.00037 |     -0.03104 |   -0.04652 |   -0.11965 |    -0.01178 |
      |  2 |            2 | 2.20594 | -0.53811 |   -0.12181 |   -0.52386 |     0.03042 |     -0.00868 |    0.06354 |   -0.1096  |    -0.021   |
      |  3 |            3 | 2.20594 | -0.29654 |    0.98054 |    0.67781 |    -0.04109 |     -0.07643 |    0.65462 |    0.01635 |     0.03193 |
      |  4 |            4 | 2.20594 |  0.64479 |   -0.27152 |   -0.03013 |     0.04546 |     -0.00464 |   -0.04137 |    0.04311 |     0.09163 |
      |  5 |            5 | 2.20594 |  0.09562 |   -0.207   |    0.01537 |     0.04099 |      0.09688 |   -0.07107 |    0.08347 |     0.07987 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00024 |    0.00108 |    0.00108 |     0.0022  |      0.00751 |    0.00317 |    0.00311 |     0.00374 |
      |  2 |            2 |      0 |  0.00063 |    0.00279 |    0.00279 |     0.00546 |      0.01035 |    0.0074  |    0.0066  |     0.00759 |
      |  3 |            3 |      0 |  0.00193 |    0.0085  |    0.0085  |     0.0211  |      0.02778 |    0.0168  |    0.02417 |     0.02381 |
      |  4 |            4 |      0 |  0.00085 |    0.00376 |    0.00376 |     0.00785 |      0.01031 |    0.01018 |    0.00976 |     0.01511 |
      |  5 |            5 |      0 |  0.00186 |    0.00819 |    0.00819 |     0.02361 |      0.032   |    0.03767 |    0.02233 |     0.02675 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |        A |        B |        C |
      |---:|-------------:|--------:|---------:|---------:|---------:|
      |  1 |            1 | 2.20594 | -0.59448 | -0.2312  | -0.69212 |
      |  2 |            2 | 2.20594 | -1.25693 | -0.21855 |  0.24637 |
      |  3 |            3 | 2.20594 |  0.9571  |  0.53951 |  0.45056 |
      |  4 |            4 | 2.20594 |  0.21299 | -0.00263 |  0.26696 |
      |  5 |            5 | 2.20594 | -0.47727 |  0.00735 |  0.60406 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.83324 |   -0.00685 |   -0.36058 |     0.00447 |     -0.09788 |   -0.07688 |   -0.07622 |    -0.07062 |
      |  2 |            2 | 2.20594 | -0.81848 |   -0.01908 |   -0.24768 |    -0.07803 |     -0.05346 |   -0.00956 |    0.01449 |    -0.01731 |
      |  3 |            3 | 2.20594 |  0.46521 |    0.59257 |   -0.14769 |    -0.00181 |      0.03387 |    0.84724 |    0.01128 |     0.14651 |
      |  4 |            4 | 2.20594 |  0.27388 |   -0.04133 |    0.17822 |     0.08527 |      0.01992 |   -0.17881 |    0.08369 |     0.05647 |
      |  5 |            5 | 2.20594 | -0.33566 |   -0.06163 |    0.05713 |     0.116   |      0.14863 |    0.03032 |    0.0715  |     0.10786 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02769 |    0.03476 |    0.05569 |     0.05152 |      0.06114 |    0.02012 |    0.06027 |     0.05785 |
      |  2 |            2 |      0 |  0.02175 |    0.02326 |    0.029   |     0.03918 |      0.03998 |    0.01669 |    0.02973 |     0.0346  |
      |  3 |            3 |      0 |  0.02691 |    0.02816 |    0.03761 |     0.03149 |      0.03888 |    0.02036 |    0.04009 |     0.03154 |
      |  4 |            4 |      0 |  0.01288 |    0.02379 |    0.01708 |     0.00958 |      0.02067 |    0.00914 |    0.01612 |     0.01287 |
      |  5 |            5 |      0 |  0.02194 |    0.02485 |    0.04123 |     0.04063 |      0.03181 |    0.01875 |    0.05163 |     0.04135 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_iterative_low_coalitions
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.70708 |   -0.11296 |   -0.3444  |    -0.18237 |     -0.0561  |   -0.09616 |   -0.00324 |    -0.01548 |
      |  2 |            2 | 2.20594 | -0.73743 |    0.00325 |   -0.33552 |    -0.22072 |     -0.01859 |    0.02096 |    0.03539 |     0.02355 |
      |  3 |            3 | 2.20594 |  0.43317 |    0.63337 |   -0.12585 |    -0.14967 |      0.03779 |    0.9173  |    0.03959 |     0.16147 |
      |  4 |            4 | 2.20594 |  0.26853 |   -0.05577 |    0.10059 |     0.04747 |      0.02743 |   -0.10358 |    0.07562 |     0.11702 |
      |  5 |            5 | 2.20594 | -0.44463 |   -0.06072 |    0.01664 |     0.18201 |      0.08382 |    0.14349 |    0.04106 |     0.17248 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.13943 |    0.14801 |    0.11875 |     0.14085 |      0.06616 |    0.06213 |    0.14608 |     0.05247 |
      |  2 |            2 |      0 |  0.09453 |    0.08111 |    0.10737 |     0.10604 |      0.03406 |    0.09334 |    0.08173 |     0.03318 |
      |  3 |            3 |      0 |  0.06388 |    0.14332 |    0.09936 |     0.24963 |      0.02662 |    0.26834 |    0.09548 |     0.03397 |
      |  4 |            4 |      0 |  0.07339 |    0.08116 |    0.04387 |     0.06923 |      0.04257 |    0.05162 |    0.08291 |     0.02137 |
      |  5 |            5 |      0 |  0.13825 |    0.12497 |    0.13346 |     0.13778 |      0.04336 |    0.04631 |    0.11583 |     0.04734 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |        A |        B |        C |
      |---:|-------------:|--------:|---------:|---------:|---------:|
      |  1 |            1 | 2.20594 | -1.14608 | -0.1403  | -0.23141 |
      |  2 |            2 | 2.20594 | -1.14444 | -0.12367 |  0.03901 |
      |  3 |            3 | 2.20594 |  0.76423 |  0.86848 |  0.31446 |
      |  4 |            4 | 2.20594 |  0.40878 | -0.12143 |  0.18997 |
      |  5 |            5 | 2.20594 | -0.3415  |  0.17057 |  0.30507 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.23375 |   -0.05973 |    0.04112 |     0.00943 |     -0.01926 |   -0.13167 |   -0.09365 |    -0.03027 |
      |  2 |            2 | 2.20594 | -0.86056 |   -0.05551 |   -0.12497 |    -0.02075 |     -0.02106 |   -0.04083 |   -0.08706 |    -0.01837 |
      |  3 |            3 | 2.20594 |  0.08169 |    0.63995 |    0.14661 |    -0.00534 |      0.02023 |    0.93615 |    0.00702 |     0.12086 |
      |  4 |            4 | 2.20594 |  0.71379 |   -0.11139 |   -0.07731 |     0.03196 |      0.00517 |   -0.15771 |    0.06977 |     0.00305 |
      |  5 |            5 | 2.20594 |  0.11125 |   -0.06596 |   -0.03509 |     0.0268  |      0.02716 |    0.0778  |   -0.02593 |     0.01811 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00151 |    0.00177 |    0.00125 |     0.00145 |      0.00146 |    0.00182 |    0.0019  |     0.0014  |
      |  2 |            2 |      0 |  0.00147 |    0.00173 |    0.00203 |     0.00315 |      0.0019  |    0.00235 |    0.0052  |     0.00264 |
      |  3 |            3 |      0 |  0.00479 |    0.00739 |    0.00703 |     0.00751 |      0.00674 |    0.0111  |    0.01078 |     0.01028 |
      |  4 |            4 |      0 |  0.00251 |    0.00341 |    0.00418 |     0.00359 |      0.00257 |    0.00412 |    0.00504 |     0.00598 |
      |  5 |            5 |      0 |  0.00119 |    0.00119 |    0.00126 |     0.00126 |      0.00198 |    0.00075 |    0.00288 |     0.00152 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.57437 |   -0.04444 |   -0.18641 |     0.03001 |     -0.03576 |   -0.26948 |   -0.26804 |    -0.16931 |
      |  2 |            2 | 2.20594 | -0.69287 |   -0.06756 |   -0.26916 |    -0.19665 |     -0.0726  |   -0.08732 |    0.17508 |    -0.01801 |
      |  3 |            3 | 2.20594 |  0.26779 |    0.27439 |    0.0606  |     0.18653 |      0.19789 |    0.79527 |   -0.06875 |     0.23342 |
      |  4 |            4 | 2.20594 |  0.38579 |   -0.09677 |    0.13657 |     0.01367 |     -0.01706 |   -0.20096 |    0.15823 |     0.09784 |
      |  5 |            5 | 2.20594 | -0.42593 |   -0.01482 |   -0.06969 |    -0.01785 |      0.00299 |    0.06716 |    0.28692 |     0.30538 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05634 |    0.04806 |    0.03027 |     0.03213 |      0.04318 |    0.03102 |    0.07316 |     0.04605 |
      |  2 |            2 |      0 |  0.08576 |    0.0946  |    0.05055 |     0.05487 |      0.08493 |    0.07153 |    0.10753 |     0.08386 |
      |  3 |            3 |      0 |  0.11181 |    0.11866 |    0.07476 |     0.0822  |      0.11105 |    0.09499 |    0.14161 |     0.1188  |
      |  4 |            4 |      0 |  0.01686 |    0.01004 |    0.00977 |     0.01006 |      0.00736 |    0.0076  |    0.01886 |     0.01675 |
      |  5 |            5 |      0 |  0.05366 |    0.0419  |    0.02889 |     0.03158 |      0.03837 |    0.02779 |    0.06799 |     0.04765 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.54087 |    0.28814 |   -0.22708 |     0.00357 |     -0.07167 |   -0.31406 |   -0.29539 |    -0.36043 |
      |  2 |            2 | 2.20594 | -0.21647 |   -0.15348 |   -0.35339 |    -0.10868 |      0.08148 |    0.1562  |   -0.3941  |    -0.24067 |
      |  3 |            3 | 2.20594 |  0.07643 |    0.42069 |    0.03632 |    -0.1603  |      0.35019 |    0.43758 |    0.22433 |     0.56193 |
      |  4 |            4 | 2.20594 |  0.28688 |   -0.14645 |    0.03696 |     0.08454 |     -0.13815 |   -0.09829 |    0.04983 |     0.40201 |
      |  5 |            5 | 2.20594 | -0.01117 |    0.00908 |   -0.16164 |     0.19271 |      0.00395 |    0.09043 |   -0.13109 |     0.14188 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.09503 |    0.09019 |    0.1429  |     0.11218 |      0.11343 |    0.11852 |    0.11931 |     0.16187 |
      |  2 |            2 |      0 |  0.06478 |    0.0684  |    0.0896  |     0.07933 |      0.06575 |    0.088   |    0.07963 |     0.11413 |
      |  3 |            3 |      0 |  0.1072  |    0.17002 |    0.13756 |     0.1731  |      0.18697 |    0.14878 |    0.12234 |     0.25153 |
      |  4 |            4 |      0 |  0.03905 |    0.03409 |    0.07325 |     0.07252 |      0.03703 |    0.05169 |    0.04106 |     0.09055 |
      |  5 |            5 |      0 |  0.05229 |    0.061   |    0.11271 |     0.0853  |      0.06642 |    0.06707 |    0.11512 |     0.11382 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_splines
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.70465 |   -0.11222 |   -0.3091  |     0.13323 |     -0.02252 |   -0.3667  |   -0.01689 |    -0.11895 |
      |  2 |            2 | 2.20594 | -0.65626 |   -0.21498 |   -0.33411 |    -0.26325 |     -0.02363 |    0.09672 |    0.13464 |     0.03176 |
      |  3 |            3 | 2.20594 |  0.61256 |    0.65903 |   -0.01725 |    -0.02329 |      0.13757 |    0.44569 |    0.01824 |     0.11462 |
      |  4 |            4 | 2.20594 |  0.52872 |   -0.03401 |    0.13569 |     0.0453  |     -0.00041 |   -0.3383  |    0.05222 |     0.08811 |
      |  5 |            5 | 2.20594 | -0.54541 |   -0.14202 |   -0.09561 |     0.10682 |      0.00349 |    0.29848 |    0.36846 |     0.13992 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.07272 |    0.07748 |    0.05443 |     0.03537 |      0.03867 |    0.02551 |    0.05929 |     0.06767 |
      |  2 |            2 |      0 |  0.0697  |    0.08065 |    0.05764 |     0.03883 |      0.04606 |    0.02561 |    0.05907 |     0.06943 |
      |  3 |            3 |      0 |  0.05723 |    0.08669 |    0.06718 |     0.05651 |      0.07119 |    0.04018 |    0.08359 |     0.09711 |
      |  4 |            4 |      0 |  0.05865 |    0.07279 |    0.0426  |     0.02921 |      0.03841 |    0.02089 |    0.04611 |     0.05667 |
      |  5 |            5 |      0 |  0.02434 |    0.03728 |    0.01859 |     0.0155  |      0.01917 |    0.0102  |    0.02662 |     0.0197  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.88087 |   -0.05652 |   -0.02196 |    -0.04153 |     -0.01647 |   -0.41694 |   -0.05822 |    -0.0253  |
      |  2 |            2 | 2.20594 | -0.72135 |   -0.11563 |   -0.04493 |    -0.08496 |     -0.03369 |   -0.05767 |   -0.11912 |    -0.05176 |
      |  3 |            3 | 2.20594 |  0.19781 |    0.83353 |    0.10494 |     0.19843 |      0.07868 |    0.13469 |    0.2782  |     0.12088 |
      |  4 |            4 | 2.20594 | -0.1482  |    0.02458 |    0.52714 |     0.01806 |      0.00716 |    0.01226 |    0.02532 |     0.011   |
      |  5 |            5 | 2.20594 |  0.30983 |   -0.04001 |   -0.01555 |    -0.0294  |     -0.01166 |   -0.01995 |   -0.04121 |    -0.01791 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.03049 |    0.02659 |    0.04688 |     0.0315  |      0.04531 |    0.03616 |    0.02151 |     0.03569 |
      |  2 |            2 |      0 |  0.06239 |    0.0544  |    0.09592 |     0.06446 |      0.09271 |    0.07398 |    0.04401 |     0.07303 |
      |  3 |            3 |      0 |  0.14571 |    0.12706 |    0.22403 |     0.15055 |      0.21653 |    0.17278 |    0.1028  |     0.17055 |
      |  4 |            4 |      0 |  0.01326 |    0.01156 |    0.02039 |     0.0137  |      0.01971 |    0.01573 |    0.00936 |     0.01552 |
      |  5 |            5 |      0 |  0.02159 |    0.01882 |    0.03319 |     0.0223  |      0.03208 |    0.0256  |    0.01523 |     0.02527 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.52567 |   -0.00602 |   -0.12196 |     0.05449 |     -0.02759 |   -0.29325 |   -0.3309  |    -0.26691 |
      |  2 |            2 | 2.20594 | -0.26612 |   -0.10463 |   -0.35045 |    -0.10398 |     -0.03447 |    0.19097 |   -0.32962 |    -0.23081 |
      |  3 |            3 | 2.20594 |  0.30789 |    0.52318 |    0.0759  |    -0.38097 |      0.19277 |    0.26082 |    0.28635 |     0.68123 |
      |  4 |            4 | 2.20594 |  0.14216 |   -0.08406 |    0.1851  |     0.11518 |     -0.05327 |   -0.06094 |   -0.0148  |     0.24795 |
      |  5 |            5 | 2.20594 | -0.06461 |   -0.13633 |   -0.12189 |     0.07179 |      0.07368 |    0.17658 |   -0.14787 |     0.28279 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.04103 |    0.03177 |    0.0749  |     0.03719 |      0.041   |    0.04133 |    0.0329  |     0.05415 |
      |  2 |            2 |      0 |  0.02562 |    0.02596 |    0.05434 |     0.05602 |      0.03385 |    0.03699 |    0.03844 |     0.04488 |
      |  3 |            3 |      0 |  0.0548  |    0.07421 |    0.09413 |     0.10186 |      0.08637 |    0.07799 |    0.06444 |     0.08407 |
      |  4 |            4 |      0 |  0.03223 |    0.02903 |    0.06826 |     0.02646 |      0.02732 |    0.03051 |    0.02181 |     0.04579 |
      |  5 |            5 |      0 |  0.03833 |    0.02968 |    0.05615 |     0.03551 |      0.04092 |    0.03031 |    0.0416  |     0.04511 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger_tuned
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.51953 |   -0.00105 |   -0.12835 |     0.05307 |     -0.04346 |   -0.29788 |   -0.30902 |    -0.27157 |
      |  2 |            2 | 2.20594 | -0.2631  |   -0.0989  |   -0.35583 |    -0.10725 |     -0.01812 |    0.1749  |   -0.3341  |    -0.22671 |
      |  3 |            3 | 2.20594 |  0.31867 |    0.53049 |    0.08407 |    -0.42025 |      0.19759 |    0.29206 |    0.30768 |     0.63685 |
      |  4 |            4 | 2.20594 |  0.1396  |   -0.08357 |    0.20155 |     0.09279 |     -0.0755  |   -0.05611 |   -0.00245 |     0.26101 |
      |  5 |            5 | 2.20594 | -0.04683 |   -0.13095 |   -0.11708 |     0.06234 |      0.07981 |    0.18347 |   -0.17112 |     0.27448 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.04969 |    0.03439 |    0.06322 |     0.04296 |      0.05087 |    0.03285 |    0.03408 |     0.06375 |
      |  2 |            2 |      0 |  0.0302  |    0.0315  |    0.05436 |     0.06664 |      0.05232 |    0.02544 |    0.03247 |     0.05339 |
      |  3 |            3 |      0 |  0.07465 |    0.09019 |    0.0956  |     0.13044 |      0.16419 |    0.06669 |    0.07049 |     0.11628 |
      |  4 |            4 |      0 |  0.04137 |    0.03141 |    0.06212 |     0.03172 |      0.02992 |    0.02785 |    0.02285 |     0.05104 |
      |  5 |            5 |      0 |  0.03614 |    0.02939 |    0.03753 |     0.04464 |      0.04987 |    0.02436 |    0.03311 |     0.04857 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_vaeac_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.911187 |  -0.063618 |  -0.233452 |    0.048069 |    -0.051591 |  -0.276791 |  -0.082853 |    0.053625 |
      |  2 |            2 | 2.20594 | -0.6329   |  -0.066134 |  -0.234123 |   -0.136845 |    -0.068172 |  -0.039521 |  -0.047788 |   -0.003625 |
      |  3 |            3 | 2.20594 |  0.504351 |   0.441483 |   0.019428 |   -0.115457 |     0.00256  |   0.998042 |  -0.05534  |    0.152102 |
      |  4 |            4 | 2.20594 |  0.515471 |  -0.064975 |   0.100552 |    0.014562 |    -0.039815 |  -0.202868 |   0.091924 |    0.06247  |
      |  5 |            5 | 2.20594 |  0.112816 |  -0.151657 |  -0.03502  |    0.049769 |     0.018632 |   0.133543 |  -0.045769 |    0.051828 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.082023 |   0.06017  |   0.074241 |    0.097607 |     0.048199 |   0.079811 |   0.068784 |    0.007093 |
      |  2 |            2 |      0 | 0.062529 |   0.089182 |   0.079426 |    0.067297 |     0.046945 |   0.043257 |   0.110124 |    0.014082 |
      |  3 |            3 |      0 | 0.047904 |   0.085477 |   0.086283 |    0.263129 |     0.026057 |   0.295514 |   0.084178 |    0.022669 |
      |  4 |            4 |      0 | 0.057181 |   0.047923 |   0.047681 |    0.073854 |     0.03672  |   0.065125 |   0.05351  |    0.003984 |
      |  5 |            5 |      0 | 0.027721 |   0.048017 |   0.041017 |    0.037826 |     0.019132 |   0.029597 |   0.047079 |    0.007302 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_xgb_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.67516 |    0.06213 |   -0.09352 |     0.12961 |     -0.04085 |   -0.28973 |   -0.56985 |    -0.22299 |
      |  2 |            2 | 2.20594 | -0.52671 |    0.00948 |   -0.47606 |    -0.20436 |      0.01873 |    0.15735 |   -0.21332 |    -0.02237 |
      |  3 |            3 | 2.20594 |  0.50977 |    0.70098 |    0.03569 |    -0.25121 |      0.0715  |    1.1158  |    0.10949 |     0.42354 |
      |  4 |            4 | 2.20594 |  0.37847 |   -0.07438 |   -0.03263 |     0.13387 |     -0.15325 |   -0.23545 |    0.07289 |     0.19819 |
      |  5 |            5 | 2.20594 | -0.44599 |   -0.1104  |   -0.11891 |     0.17978 |      0.13442 |   -0.03847 |    0.05417 |     0.33468 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.01373 |    0.01393 |    0.01502 |     0.01479 |      0.01474 |    0.01282 |    0.01268 |     0.0111  |
      |  2 |            2 |      0 |  0.02709 |    0.02984 |    0.03005 |     0.02315 |      0.02609 |    0.02161 |    0.02673 |     0.03089 |
      |  3 |            3 |      0 |  0.02182 |    0.02114 |    0.02466 |     0.02106 |      0.0233  |    0.01747 |    0.02273 |     0.02044 |
      |  4 |            4 |      0 |  0.01093 |    0.00935 |    0.01085 |     0.0096  |      0.00971 |    0.01029 |    0.01019 |     0.0107  |
      |  5 |            5 |      0 |  0.02148 |    0.0213  |    0.02612 |     0.02026 |      0.02135 |    0.02069 |    0.02435 |     0.02164 |
    ''',
  })
# ---
